# protobuf-util

./: .gitignore  CMakeLists.txt  README.md  valgrind.supp
include/protobufutil/: byte_stream.h  common.h  incoming_value.h  message_stream.h  mock_incoming_value.h  mock_message_stream.h  outgoing_value.h  reader_writer.h
src/: byte_stream.cc  incoming_string_value.cc  message_stream.cc  message_stream_test.cc  outgoing_string_value.cc  protobufutil_test.cc  reader_writer.cc  string_value_test.cc
